<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flasher</string>
    <string name="command_type">Command type</string>
    <string name="command_args">Arguments</string>
    <string name="command_tap_to_select">Tap to select…</string>
    <string name="command_tap_to_enter_mask">Tap to enter partial file name…</string>
    <string name="command_tap_to_select_folder">Tap to select folder…</string>
    <string name="command_deleted">Command deleted</string>
    <string name="not_found">Not found</string>
    <string name="reboot">Script deployed. Reboot to recovery?</string>
    <string name="enter_mask">Enter (partial) file name</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="success">Success</string>
    <string name="schedule_time_title">Time</string>
    <string name="schedule_interval_title">Repeat every (days)</string>
    <string name="schedule_last_run">Last run: %s</string>
    <string name="schedule_next_run">Next run: %s</string>
    <string name="schedule_last_run_notification">Scheduled run was performed at %s</string>
    <string name="schedule_only_charging">Only when charging</string>
    <string name="schedule_only_idle">Only when device is idle</string>
    <string name="schedule_only_high_battery">Only when device has enough battery left</string>
    <string name="schedule_error_notification">Scheduled run failed: %s</string>
    <string name="folder_empty">Folder is empty</string>

    <!-- Action strings -->
    <string name="action_home">Home</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="action_undo">Undo</string>
    <string name="action_about">About</string>
    <string name="action_build">Build script</string>
    <string name="action_reboot">Reboot</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_enable_schedule">Enable schedule</string>
    <string name="action_add">Add command</string>

    <!-- Preferences strings -->
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_misc">Misc</string>
    <string name="pref_category_debug">Debug</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_security">Security</string>
    <string name="pref_title_theme">App Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_black">Black</string>
    <string name="theme_light_pixel">Light (Pixel accent)</string>
    <string name="theme_dark_pixel">Dark (Pixel accent)</string>
    <string name="theme_black_pixel">Black (Pixel accent)</string>
    <string name="pref_title_delete_deployed_script">Delete deployed script</string>
    <string name="pref_title_analyzer">Use script analyzer</string>
    <string name="pref_summary_analyzer">Run very basic foolproof checks on a generated script. DISABLE AT YOUR OWN RISK!</string>
    <string name="pref_title_mask_toast">Show toast with file names</string>
    <string name="pref_summary_mask_toast">Show all files resolved by smart flash</string>
    <string name="pref_title_clear_schedule">Clear schedule settings</string>
    <string name="pref_title_show_notification_on_boot">Show notification on boot</string>
    <string name="pref_summary_show_notification_on_boot">Show notification after a scheduled run was performed and booted back to system</string>
    <string name="pref_title_compress_backups">Compress backups</string>
    <string name="pref_title_delete_old_backups">Delete old backups</string>
    <string name="pref_title_backups_to_keep">Backups to keep</string>
    <string name="pref_title_enable_file_log">Write debug log to file</string>
    <string name="pref_summary_enable_file_log">Will be saved to %s</string>
    <string name="pref_title_ask_fingerprint_on_launch">Protect app with fingerprint</string>
    <string name="pref_summary_ask_fingerprint_on_launch">Use fingerprint scanner to allow access to the app</string>
    <string name="pref_title_ask_fingerprint_to_reboot">Protect reboot option with fingerprint</string>
    <string name="pref_summary_ask_fingerprint_to_reboot">Use fingerprint scanner to allow reboot to recovery</string>
    <string name="pref_title_backups_path">Backups location</string>
    <string name="pref_backups_path_empty">Please select a folder</string>

    <!-- Command names -->
    <string name="command_wipe">Wipe</string>
    <string name="command_backup">Backup</string>
    <string name="command_flash_file">Flash file</string>
    <string name="command_flash_mask">Smart flash</string>

    <!-- Permissions -->
    <string name="permission_denied_storage">Storage permission is required.</string>
    <string name="permission_denied_su">Superuser access denied. Are you rooted?</string>

    <!-- Script analyzer -->
    <string name="analyze_no_rom">System wipe and no ROM installation detected.</string>
    <string name="analyze_system_space">Insufficient system space to flash selected files.</string>
    <string name="analyze_empty_script">Script is empty</string>
    <string name="analyze_empty_script_deployed">Deployed script has 0 bytes size (insufficient cache space?)</string>

    <!-- About activity -->
    <string name="about_versions">Versions</string>
    <string name="about_the_team">The Team</string>
    <string name="about_credits">Credits</string>
    <string name="about_links">Links</string>
    <string name="about_team_victor" translatable="false">Victor Lapin</string>
    <string name="about_developer">Developer</string>
    <string name="about_credits_bauke" translatable="false">Bauke Zwart</string>
    <string name="about_credits_bauke_text">Original Tasker implementation and testing</string>
    <string name="about_credits_anton" translatable="false">Anton Kolomin</string>
    <string name="about_credits_anton_text">Useful tips on the code</string>
    <string name="about_credits_austin" translatable="false">Austin Andrews</string>
    <string name="about_credits_austin_text">Material design icons</string>
    <string name="about_credits_jared" translatable="false">Jared Rummler</string>
    <string name="about_credits_jared_text">OpenRecoveryScript builder gist</string>
    <string name="about_credits_topjohnwu" translatable="false">John Wu</string>
    <string name="about_credits_topjohnwu_text">libsu open source project</string>
    <string name="about_credits_aidan" translatable="false">Aidan Follestad</string>
    <string name="about_credits_aidan_text">material-dialogs open source project</string>
    <string name="about_credits_doug" translatable="false">Doug Hardester</string>
    <string name="about_credits_dave" translatable="false">David Wilson</string>
    <string name="about_credits_dave_text">Help with theme related stuff</string>
    <string name="about_credits_roger" translatable="false">Roger Truttmann</string>
    <string name="about_credits_roger_text">App icon</string>
    <string name="about_credits_bill" translatable="false">Bill Blandford</string>
    <string name="about_credits_george" translatable="false">George G.</string>
    <string name="about_credits_bill_text">Testing</string>
    <string name="about_links_source_code">Source code</string>
    <string name="about_links_gitlab">View at Gitlab.com</string>
    <string name="about_links_donate">Buy me a coffee</string>
    <string name="about_links_paypal">Donate via PayPal</string>
    <string name="about_links_oss">Open source licenses</string>
    <string name="about_links_oss_text">License details for open source software</string>

    <plurals name="schedule_interval">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <string name="schedule_interval_never">Never</string>

    <string name="channel_default_id" translatable="false">default</string>
    <string name="channel_default_title">Default</string>

    <string name="empty_view_title">A fresh start</string>
    <string name="empty_view_summary">Anything to flash?</string>

    <string name="fingerprint_auth_title">The app is locked</string>
    <string name="fingerprint_auth_description">Confirm fingerprint to access the app.</string>
    <string name="fingerprint_reboot_title">Reboot option is locked</string>
    <string name="fingerprint_reboot_description">Confirm fingerprint to reboot to recovery.</string>
    <string name="fingerprint_setting_title">Use fingerprint</string>
    <string name="fingerprint_setting_description">Confirmation is required.</string>
</resources>