<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.victorlapin.flasher.ui.ToolbarPreference
        android:key="toolbar" />

    <PreferenceCategory android:title="@string/pref_category_appearance">

        <ListPreference
            android:key="interface_theme"
            android:title="@string/pref_title_theme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_general">

        <SwitchPreference
            android:defaultValue="true"
            android:key="use_analyzer"
            android:summary="@string/pref_summary_analyzer"
            android:title="@string/pref_title_analyzer" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="show_notification_on_boot"
            android:summary="@string/pref_summary_show_notification_on_boot"
            android:title="@string/pref_title_show_notification_on_boot" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="compress_backups"
            android:title="@string/pref_title_compress_backups" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="delete_old_backups"
            android:title="@string/pref_title_delete_old_backups" />

        <EditTextPreference
            android:defaultValue="2"
            android:dependency="delete_old_backups"
            android:key="backups_to_keep"
            android:title="@string/pref_title_backups_to_keep" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_debug">

        <SwitchPreference
            android:defaultValue="false"
            android:key="save_debug_script"
            android:title="@string/pref_title_save_debug_script" />

        <Preference
            android:key="delete_deployed_script"
            android:title="@string/pref_title_delete_deployed_script" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="show_mask_toast"
            android:summary="@string/pref_summary_mask_toast"
            android:title="@string/pref_title_mask_toast" />

        <Preference
            android:key="clear_schedule_settings"
            android:title="@string/pref_title_clear_schedule" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_misc">

        <Preference
            android:key="open_about"
            android:title="@string/action_about" />

    </PreferenceCategory>

</PreferenceScreen>